--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,5 +1,7 @@
 - name: configure my sql server
   hosts: mysql
   become: yes
+  vars_files:
+  - /var/expense/credentials.yaml
   roles:
   - mysql
