--- a/roles/mysql/vars/main.yaml
+++ b/roles/mysql/vars/main.yaml
@@ -1,2 +1,2 @@
-mysql_root_password: ExpenseApp@1
-login_host: mysql.devops81s.site
+# mysql_root_password: ExpenseApp@1
+# login_host: mysql.devops81s.site
