--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -5,7 +5,7 @@ filters:
   tag:Name: nginx
   instance-state-name : running
 hostnames:
-  - private_ip_address
+  - private-ip-address
 compose:
 # This sets the ansible_host variable to connect with the private IP address without changing the hostname.
   ansible_host: private_ip_address  
