--- a/nginx.yaml
+++ b/nginx.yaml
@@ -1,6 +1,7 @@
 - name: nginx install and run
   hosts: all
   become: yes #take sudo access
+  serial: 3
   tasks:
   - name: install nginx
     ansible.builtin.package: #heterogeneous module that can work for all distros
